left and right working